# ChatAI01

./: README.md  REMADE.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 01b74c26e18e_initial_migration.py
app/: .env  config.py  main.py
app/ai/: aichainservice.py
app/api/: hello.py  message.py  provider.py  role.py
app/data/: db.py
app/data/models/: __init__.py  base.py  document.py  knowledge_base.py  message.py  provider.py  role.py  role_knowledge.py  session.py  session_knowledge.py
app/schemas/: message.py  provider.py  role.py  session.py
app/service/: message.py  provider.py  role.py  session.py
